--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,6 +32,10 @@
         "our_aim_description":"",
         "our_offering_description":"",
         "our_prize_description":"",
-        "what_our_clients_say":"WHAT OUR CLIENTS SAY"
+        "what_our_clients_say":"WHAT OUR CLIENTS SAY",
+        "best_logistic_description":"Best Logistic",
+        "best_quality_description":"Best Logistic",
+        "best_products_description":"Best Logistic",
+        "best_seeds_description":"qwerty"
     }
 }
