--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -32,6 +32,10 @@
         "our_aim_description":"आसपास के क्षेत्रों के साथ ग्रामीण खेतों को जोड़ने के लिए ताकि किसानों और उपभोक्ताओं दोनों को उनके पारस्परिक लाभ के कारण लाभ मिले।",
         "our_offering_description":"खेत से उपभोक्ता तक सीधे सर्वोत्तम गुणवत्ता वाले उत्पाद ताकि आपको कभी भी भोजन की ताजगी पर सवाल उठाने की आवश्यकता न हो।",
         "our_prize_description":"हमारे देश के किसानों को बढ़ने से ज्यादा कुछ भी हमें खुश नहीं करता है, जिससे भारत के विकास के लिए उनके आर्थिक विकास का मार्ग प्रशस्त हो जाता है।",
-        "what_our_clients_say":"हमारे ग्राहक क्या कहते हैं"
+        "what_our_clients_say":"हमारे ग्राहक क्या कहते हैं",
+        "best_logistic_description":"Best Logistic",
+        "best_quality_description":"Best Logistic",
+        "best_products_description":"Best Logistic",
+        "best_seeds_description":"qwerty"
     }
 }
