adding in html multilingual

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
     "footer":{
         "get_started":"Get started",
-        "farmer":"farmer",
+        "farmer":"Farmer",
         "customer":"Customer",
         "about_us":"About Us",
         "company_information":"Company Information",
@@ -29,13 +29,80 @@
         "our_aim":"Our Aim",
         "our_offering":"Our Offering",
         "our_prize":"Our Prize",
-        "our_aim_description":"",
-        "our_offering_description":"",
-        "our_prize_description":"",
+        "our_aim_description":"To connect rural farms with the nearby areas so that both the farmers and consumers get benefitted leading to their mutual benefit.",
+        "our_offering_description":"Best quality products straight from farm to consumer so that you never need to question freshness of food you. are eating.",
+        "our_prize_description":"Nothing makes us more happy than seeing farmer of our country grow, pave a way to their economical development leading to developing India.",
         "what_our_clients_say":"WHAT OUR CLIENTS SAY",
         "best_logistic_description":"Best Logistic",
-        "best_quality_description":"Best Logistic",
-        "best_products_description":"Best Logistic",
+        "best_quality_description":"We believe quality is vital for success. Quality is all about improving products, services, systems and processes, to making sure that the whole platform is fit and effective. We work for the satisfaction of the customer for that we ensure quality.",
+        "best_products_description":"The color, flavor, texture, and the nutritional value of fresh-cut fruit and vegetable products are factors critical to consumer acceptance and the success of the products.",
         "best_seeds_description":"qwerty"
+    },
+    "header":{
+        "home":"Home",
+        "products":"Products",
+        "help":"Help",
+        "support":"Support",
+        "you_are_in":"You are in ",
+        "login_signup":"LogIn & SignUp",
+        "login_as_customer":"Login as Customer",
+        "login_as_farmer":"Login as Farmer",
+        "sign_up_as_customer":"Sign Up as Customer",
+        "sign_up_as_farmer":"Sign Up as Farmer",
+        "my_account":"My Account",
+        "logout":"log Out",
+        "my_cart":"My Cart"
+    },
+    "support":{
+       "support":"SUPPORT",
+       "issue_title":"Issue Title",
+       "issue_description":"Issue Description",
+       "email":"E-mail",
+       "screenshot":"Screenshot",
+       "browse":"Browse",
+       "no_file_selected":"No file Selected",
+       "submit_issue":"Submit Issue",
+       "title_is_required":"Title is required",
+       "description_is_required":"Email is required",
+       "email_is_required":"Email is required"
+   },
+   "help":{
+       "Help":"HELP",
+       "how_to_register":"How to Register",
+       "aadhaar_verification":"Aadhaar Verification",
+       "buying_products":"Buying Products",
+       "normal_v_bulk":"Normal Order vs Bulk Order",
+       "how_to_register_description":"Registration process is kept fairly simple to increase the User experience as a great user experience is of utmost importance to us. Simply click on your desired button whether of farmer or of customer and you will be guided to the registration and login page. Registration is just a one time process after which login is required for every session. The requirements for registration is that you must have an active mobile phone number and Aadhaar number in case of a farmer. If any issues are faced, you can contact the nearest SSC center.",
+       "aadhaar_verification_description":"Aadhaar verification is a mandatory step for Farmer registration in order to get verify his identity. It is also used to make the registration process easy and simple because by entering you Aadhaar number, you can register with a single click by providing the OPT that you get on the number linked to your aadhaar.",
+       "buying_products_description":"Buying products is also an easy task. Just search the product that you want and based on your location, the product list will be shown to you. Then you can view all the products from different farmers and their ratings. Thus, based on their ratings and your personal requirements, you can add the product to your cart and checkout at any time later.",
+       "normal_v_bulk_description":"There is a limit on the quantity of a single product that you can buy as a general customer. If greater quantity is required to be bought, it falls under the categoury of the Bulk order. The difference between the two is in the price rate and also the quantity. It is done in order to avoid any chaos and provide some ease to the farmer end."
+   },
+    "customerlogin":{
+        "login_customer":"LOGIN CUSTOMER",
+        "mobile_number":"Mobile Number*",
+        "password":"Password*",
+        "forgot_password":"Forgot Password",
+        "login":"Login Customer",
+        "register":"Register Customer",
+        "mobile_number_is_required":"Mobile number is required!",
+        "password_is_required":"Password is required!",
+        "less_than_10_digits":"Less than 10 digits",
+        "more_than_10_digits":"More than 10 digits",
+        "more_than_12_digits":"More than 12 digits",
+        "password_invalid":"Password Invalid (Atleast one lowercase, uppercase, specialcharacter, digit, minLength 6) !"
+    },
+    "farmer_login":{
+        "login_farmer":"LOGIN FARMER",
+        "mobile_number":"Mobile Number*",
+        "password":"Password*",
+        "forgot_password":"Forgot Password?",
+        "login":"Login Farmer",
+        "register":"Register Farmer",
+        "mobile_number_is_required":"Mobile number is required!",
+        "password_is_required":"Password is required!",
+        "less_than_10_digits":"Less than 10 digits",
+        "more_than_10_digits":"More than 10 digits",
+        "less_than_6_digits":"less than 6 digits",
+        "more_than_12_digits":"More than 12 digits"
     }
 }
