contact us translated to hindi

--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -86,10 +86,24 @@
         "register":"रजिस्टर",
         "mobile_number_is_required":"मोबाइल नंबर आवश्यक है",
         "password_is_required":"पासवर्ड आवश्यक है",
-        "less_than_10_digits":"१० अंकों से कम",
-        "more_than_10_digits":"१० से अधिक अंक",
-        "more_than_12_digits":"१२ से अधिक अंक",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "more_than_12_digits":"12 से अधिक अंक",
         "password_invalid":"पासवर्ड अमान्य(कम से कम एक लोअरकेस,अपरकेस,विशेष वर्ण,अंक,न्यूनतम लंबाई ६)"
+    },
+    "farmer_login":{
+        "login_farmer":"लॉगिन किसान",
+        "mobile_number":"मोबाइल नंबर*",
+        "password":"पारण शब्द*",
+        "forgot_password":"पासवर्ड भूल गए?",
+        "login":"लॉगिन किसान",
+        "register":"किसान रजिस्टर",
+        "mobile_number_is_required":"मोबाइल नंबर की आवश्यकता है!",
+        "password_is_required":"पासवर्ड की आवश्यकता है!",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "less_than_6_digits":"6 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक"
     },
     "products":{
         "search":"खोज",
@@ -111,5 +125,21 @@
         "please_enter_qantity":"कृपया मात्रा दर्ज करें",
         "close":"बंद करे",
         "proceed":"आगे बढ़ो"
+    },
+    "policy":{
+        "policies":"नीतियाँ",
+        "description":"रिटर्न संबंधित विक्रेताओं द्वारा सीधे इस नीति के तहत प्रदान की जाने वाली एक योजना है जिसके संदर्भ में संबंधित विक्रेताओं द्वारा एक्सचेंज, प्रतिस्थापन और / या धनवापसी का विकल्प प्रदान किया जाता है। किसी विशेष श्रेणी के तहत सूचीबद्ध सभी उत्पादों में समान रिटर्न पॉलिसी नहीं हो सकती है। सभी उत्पादों के लिए, उत्पाद पृष्ठ पर नीति सामान्य रिटर्न पॉलिसी पर प्रबल होगी। नीचे दी गई तालिका में किसी भी अपवाद के लिए उत्पाद पृष्ठ पर संबंधित आइटम की लागू वापसी नीति का संदर्भ लें। वापसी नीति तीन भागों में बांटा गया है; उन शर्तों और मामलों को समझने के लिए सभी वर्गों को ध्यान से पढ़ें, जिनके तहत रिटर्न स्वीकार किए जाएंगे। एक गोपनीयता नीति एक कानूनी दस्तावेज है जो बताता है कि वेबसाइट कैसे अपने आगंतुकों के बारे में डेटा एकत्र करती है, स्टोर करती है, शेयर करती है और बेचती है। इस डेटा में आम तौर पर उपयोगकर्ता का नाम, पता, जन्मदिन, वैवाहिक स्थिति, चिकित्सा इतिहास और उपभोक्ता व्यवहार जैसे आइटम शामिल होते हैं। इस दस्तावेज़ की विशिष्ट सामग्री कानूनी क्षेत्राधिकार में कानूनों पर निर्भर करती है जिसमें आपका व्यवसाय संचालित होता है। अधिकांश देशों के पास संग्रह के लिए कौन सी जानकारी योग्य है, और यह जानकारी कैसे उपयोग की जा सकती है, इसके बारे में दिशानिर्देशों का अपना सेट है। जब कानूनी दस्तावेजों की बात आती है, तो मौका नहीं लेना सबसे अच्छा होता है। सौभाग्य से, कुछ ही मिनटों में एक मुफ्त वेबसाइट गोपनीयता नीति प्राप्त करना आसान है। आपको बस इतना करना है कि नीचे खाली रिक्त स्थान भरें और हम आपको आपके व्यवसाय के लिए अपनी व्यक्तिगत गोपनीयता नीति के साथ एक ईमेल भेजेंगे।"
+    },
+    "connect_us":{
+        "contact_us":"संपर्क करें",
+        "mail_us":"मेल करें",
+        "registered_office_address":"पंजीकृत कार्यालय पता",
+        "kisan_ki_dukan":"किसान की दुकान",
+        "kkd":"KKD",
+        "publicis":"पब्लिसिस सैप्यॅन्ट प्राइवेट लिमिटेड",
+        "unitech_infospace":"यूनिटेक इंफोस्पेस",
+        "sector_21":"सेक्टर 21",
+        "gurugram":"गुडगाँव",
+        "india":"इंडिया, 122017"
     }
 }
