--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,5 +141,103 @@
         "sector_21 ":"Sector 21 ",
         "gurugram":"Gurugram",
         "india":"India, 122017"
+    },
+    "customer_register":{
+        "register_customer":"REGISTER CUSTOMER",
+        "first_name":"First Name",
+        "less_than_3_digits":"Less than 3 digits",
+        "first_name_is_required":"First Name is required!",
+        "last_name":"Last Name",
+        "mobile_number":"Mobile Number",
+        "less_than_10_digits":"Less than 10 digits",
+        "more_than_10_digits":"More than 10 digits",
+        "mobile_number_is_required":"Mobile number is required!",
+        "password":"Password",
+        "less_than_6_digits":"less than 6 digits",
+        "more_than_12_digits":"More than 12 digits",
+        "password_invalid":"Password Invalid (Atleast one lowercase, uppercase, specialcharacter, digit, minLength 6) !",
+        "password_is_required":"Password is required!",
+        "Re_enter_Password":"Re-enter Password",
+        "password_match":"The new password and confirm password do not match",
+        "send_otp":"Send OTP",
+        "verify_otp_to_register_customer":" VERIFY OTP TO REGISTER CUSTOMER",
+        "enter_otp":"Enter OTP",
+        "otp_is_required":"OTP is required",
+        "verify_otp":"Verify OTP"
+    },
+    "customer_forgot_password":{
+        "forget_password":"FORGET PASSWORD",
+        "mobile_number":"Mobile Number",
+        "less_than_10_digits":"Less than 10 digits",
+        "more_than_10_digits":"More than 10 digits",
+        "mobile_number_is_required":"Mobile number is required!",
+        "send_otp":"Send OTP",
+        "verify_otp_to_reset_password":" VERIFY OTP TO RESET PASSWORD",
+        "enter_otp":"Enter OTP",
+        "otp_is_required":"OTP is required",
+        "verify_otp":"Verify OTP",
+        "reset_password":"RESET PASSWORD",
+        "new_password":"New Password",
+        "less_than_6_digits":"less than 6 digits",
+        "more_than_12_digits":"More than 12 digits",
+        "password_is_required":"Password is required!",
+        "password_invalid":"Password Invalid (Atleast one lowercase, uppercase, specialcharacter, digit, minLength 6) !",
+        "Re_enter_Password":"Re-enter Password",
+        "password_match":"The new password and confirm password do not match",
+        "submit":"Submit"
+    },
+    "farmer_forgot_password":{
+        "forget_password":"FORGET PASSWORD",
+        "mobile_number":"Mobile Number",
+        "less_than_10_digits":"Less than 10 digits",
+        "more_than_10_digits":"More than 10 digits",
+        "mobile_number_is_required":"Mobile number is required!",
+        "send_otp":"Send OTP",
+        "verify_otp_to_reset_password":" VERIFY OTP TO RESET PASSWORD",
+        "enter_otp":"Enter OTP",
+        "otp_is_required":"OTP is required",
+        "verify_otp":"Verify OTP",
+        "reset_password":"RESET PASSWORD",
+        "new_password":"New Password",
+        "less_than_6_digits":"less than 6 digits",
+        "more_than_12_digits":"More than 12 digits",
+        "password_is_required":"Password is required!",
+        "Re_enter_Password":"Re-enter Password",
+        "password_match":"The new password and confirm password do not match",
+        "submit":"Submit"
+    },
+    "farmer_dashboard":{
+        "my_account":"My Account",
+        "add_product":"Add Product",
+        "bank_details":"Bank Details",
+        "current_order":"Current Order",
+        "previous_orders":"Previous Order",
+        "view_product":"View Product"
+    },
+    "my_account":{
+        "add_address":"Add Address",
+        "change_password":"Change Password",
+        "alternate_mobile":"Alternate Mobile",
+        "delete_profile":"Delete Profile"
+    },
+    "add_address":{
+        "add_alternate_address":"ADD ALTERNATE ADDRESS",
+        "address_line":"Address Line",
+        "enter_address_line":"Enter Address Line",
+        "address_line_required":"Address Line Required",
+        "city":"City",
+        "enter_your_city":"Enter Your City",
+        "city_required":"City is required",
+        "district":"District",
+        "enter_your_district":"Enter Your District",
+        "district_required":"District Required",
+        "state":"State",
+        "enter_your_state":"Enter Your State",
+        "state_required":"State is required",
+        "pincode":"Pincode",
+        "enter_your_pincode":"Enter Your Pincode",
+        "pincode_required":"pincode is required",
+        "update":"Update"
     }
+
 }
