--- a/src/assets/i18n/tm.json
+++ b/src/assets/i18n/tm.json
@@ -1,39 +1,129 @@
 {
- "footer":{
-     "get_started": "தொடங்குவதற்கு",
-     "farmer":"உழவர்",
-     "customer":"வாடிக்கையாளர்",
-     "about_us":"எங்களை பற்றி",
-     "company_information":"நிறுவனத்தின் தகவல்",
-     "policies":"கொள்கைகள்",
-     "contact_us":"எங்களை தொடர்பு கொள்ள",
-     "reviews":"விமர்சனங்கள்",
-     "support":"ஆதரவு",
-     "help":"உதவி",
-     "forums":"கருத்துக்களம்",
-     "kisan_ki_dukan":"கிசான் கி டுகான்"
- },
- "body":{
-     "kisan_ki_dukan":"கிசான் கி டுகான்",
-     "i_am_farmer":"நான் ஒரு விவசாயி",
-     "i_am_customer":"நான் ஒரு வாடிக்கையாளர்",
-     "caption":"இது பண்ணையில் இருந்து இல்லையென்றால் புதிது இல்லை"
- },
- "homepage":{
-     "why_choose_us":"ஏன் எங்களை தேர்வு செய்தாய்",
-     "best_logistic":"சிறந்த லாஜிஸ்டிக்ஸ்",
-     "best_quality":"சிறந்த தரம்",
-     "Best Products":"சிறந்த தயாரிப்புகள்",
-     "best_seeds":"சிறந்த விதைகள்",
-     "read_more":"மேலும் வாசிக்க",
-     "our_aim":"எங்கள் குறிக்கோள்",
-     "our_offering":"எங்கள் தயாரிப்புகள்",
-     "our_prize":"எங்கள் பரிசு",
-     "our_aim_description":"எங்கள் நோக்கம் விளக்கம்",
-     "our_offering_description":"எங்கள் தயாரிப்புகள் விவரம்",
-     "our_prize_description":"எங்கள் பரிசு விவரம்",
-     "what_our_clients_say":"எமது வாடிக்கையாளர்கள் கூறுகிறார்கள்"
-
-
- }
+    "footer":{
+        "get_started":"தொடங்குக",
+        "farmer":"உழவர்",
+        "customer":"வாடிக்கையாளர்",
+        "about_us":"எங்களை பற்றி",
+        "company_information":"நிறுவனம் பற்றி தகவல்",
+        "policies":"கொள்கைகள்",
+        "contact_us":"எங்களை தொடர்பு கொள்ள",
+        "reviews":"விமர்சனங்கள்",
+        "support":"ஆதரவு",
+        "help":"உதவி",
+        "forums":"கருத்துக்களம்",
+        "kisan_ki_dukan":"கிசான் கி டுகான்"
+    },
+    "body":{
+        "kisan_ki_dukan":"கிசான் கி டுகான்",
+        "i_am_farmer":"நான் ஒரு விவசாயி",
+        "i_am_customer":"நான் ஒரு வாடிக்கையாளர்",
+        "caption":"இது பண்ணையில் இருந்து இல்லையென்றால் புதிது இல்லை."
+    },
+    "homepage":{
+        "why_choose_us":"எங்களை ஏன் தேர்ந்தெடுக்க வேண்டும்",
+        "best_logistic":"சிறந்த லாஜிஸ்டிக்ஸ்",
+        "best_quality":"சிறந்த தரம்",
+        "best_products":"சிறந்த தயாரிப்புகள்",
+        "best_seeds":"சிறந்த விதைகள்",
+        "read_more":"மேலும் வாசிக்க",
+        "our_aim":"எங்கள் நோக்கம் ",
+        "our_offering":"எங்கள் சேவைகள்",
+        "our_prize":"எங்கள் பரிசு",
+        "our_aim_description":"கிராமப்புற பண்ணைகளை அருகிலுள்ள பகுதிகளோடு இணைக்க, விவசாயிகளும் நுகர்வோர் பயனாளிகளும் பயனடைவார்கள்.",
+        "our_offering_description":"நேரடியாக பண்ணையில் இருந்து நுகர்வோருக்கு சிறந்த தரமான பொருட்கள், எனவே நீங்கள் சாப்பிடும் உணவின் புத்துணர்வை கேள்வி கேட்கத் தேவையில்லை.",
+        "our_prize_description":"நம் நாட்டில் வளரும் விவசாயியைப் பார்க்கிலும் எங்களுக்கு ஒன்றும் மகிழ்ச்சியைத் தருவதில்லை, இது இந்தியாவின் பொருளாதார வளர்ச்சிக்கு வழிவகுக்கிறது.",
+        "what_our_clients_say":"எங்கள் வாடிக்கையாளர்கள் என்ன சொல்கிறார்கள்",
+        "best_logistic_description":"சிறந்த லாஜிஸ்டிக்ஸ்",
+        "best_quality_description":"நம்முடைய வெற்றிக்கு  தரம் முக்கியம் என்று நாங்கள் நம்புகிறோம். தரம் என்பது பொருள்கள், அமைப்புகள் மற்றும் செயல்முறைகள் ஆகியவற்றை மேம்படுத்துவது, முழு மேடையும் பொருத்தமற்றதா மற்றும் பயனுள்ளதா என்பதை உறுதி செய்வது. வாடிக்கையாளரின் திருப்திக்கு நாம் தரத்தை உறுதி செய்கிறோம்.",
+        "best_products_description":"வண்ணம், வாசனை, அமைப்பு மற்றும் புதிய வெட்டு பழம் மற்றும் காய்கறிப் பொருட்களின் ஊட்டச்சத்து மதிப்பு ஆகியவை நுகர்வோர் ஏற்றுமதியும், உற்பத்திகளின் வெற்றிக்குமான காரணிகள்.",
+        "best_seeds_description":"qwerty"
+    },
+    "header":{
+        "home":"முகப்பு",
+        "products":"தயாரிப்புகள்",
+        "help":"உதவி",
+        "support":"ஆதரவு",
+        "you_are_in":"நீங்கள்  இருக்கும் இடம்",
+        "login_signup":"உள்நுழை & பதிவுசெய்தல்",
+        "login_as_customer":"வாடிக்கையாளராக உள்நுழைக",
+        "login_as_farmer":"விவசாயியாக உள்நுழைக ",
+        "sign_up_as_customer":"வாடிக்கையாளராக பதிவு செய்க",
+        "sign_up_as_farmer":"விவசாயியாக பதிவு செய்க",
+        "my_account":"என் கணக்கு",
+        "logout":"வெளியேறு",
+        "my_cart":"என் வணிக வண்டி"
+    },
+    "support":{
+       "support":"ஆதரவு",
+       "issue_title":"பிரச்சினை தலைப்பு",
+       "issue_description":"பிரச்சினை விளக்கம்",
+       "email":"மின்னஞ்சல்",
+       "screenshot":"திரை புகைப்படம்",
+       "browse":"உலாவுக",
+       "no_file_selected":"எந்த கோப்பும் தேர்வு செய்யப்படவில்லை",
+       "submit_issue":"பிரச்சினை சமர்ப்பிக்கவும்",
+       "title_is_required":"தலைப்பு தேவைப்படுகிறது",
+       "description_is_required":"விளக்கம் தேவை",
+       "email_is_required":"மின்னஞ்சல் தேவை"
+   },
+   "help":{
+       "Help":"உதவி",
+       "how_to_register":"எப்படி பதிவு செய்ய வேண்டும்",
+       "aadhaar_verification":"ஆதார் சரிபார்ப்பு",
+       "buying_products":"வாங்குதல் தயாரிப்புகள்",
+       "normal_v_bulk":"இயல்பான ஆர்டர் vs மொத்த ஆர்டர்",
+       "how_to_register_description":"பயனர் அனுபவத்தை அதிகரிக்க பதிவுசெய்யும் செயல்முறை மிகவும் எளிமையாக வைக்கப்பட்டுள்ளது , ஏனெனில் ஒரு சிறந்த பயனர் அனுபவம் எங்களுக்கு  மிகவும் முக்கியத்துவம் வாய்ந்தது.உங்களுக்கு விருப்பமான  பொத்தானை விவசாயி அல்லது வாடிக்கையாளர் என்பதை கிளிக் செய்தால், பதிவு மற்றும் உள்நுழைவு பக்கத்துக்கு  நீங்கள் வழிநடத்தப்படுவீர்கள்.பதிவு முறை ஒரு முறை மட்டுமே பிறகு ஒவ்வொரு அமர்விற்கும் உள்நுழைவு அவசியம் தேவைப்படும் .பதிவிற்கான தேவைகள் என்னவென்றால், நீங்கள் ஒரு விவசாயி எனில்  ஒரு செயலில் இருக்கும்  மொபைல் தொலைபேசி எண் மற்றும் ஆதார்  எண் இருக்க வேண்டும்.ஏதேனும் சிக்கல்களை எதிர்கொண்டால், நீங்கள் அருகில் உள்ள CSC மையத்தை தொடர்பு கொள்ளலாம்.",
+       "aadhaar_verification_description":"ஆதார்  சரிபார்ப்பு என்பது விவசாயிகள் அடையாளத்தை சரிபார்க்க அவர்களின் பதிவுக்கான கட்டாய நடவடிக்கை ஆகும்.பதிவு முறையை எளிதாக்க   இது பயன்படுத்தப்படுகிறது.ஏனென்றால், ஆதார் எண்ணை உள்ளிட்ட பின் ,உங்கள் ஆதாருடன்  இணைக்கப்பட்ட தொலைபேசி எண்ணில் பெற்ற OTP ஐ வழங்குவதன் மூலம் ,ஒரே கிளிக்கில் நீங்கள் பதிவு செய்யலாம்  ",
+       "buying_products_description":"பொருட்களை  வாங்குவதும் ஒரு எளிதான பணியாகும்.நீங்கள் விரும்பும் பொருட்களை நீங்கள் தேட ,உங்கள் இருப்பிடத்தின் அடிப்படையில், தயாரிப்பு பட்டியல் உங்களுக்கு காண்பிக்கப்படும்.நீங்கள் பல்வேறு விவசாயிகளிடமிருந்தும்,அவர்களின்  தரவரிசைகளைப் பொருத்தும் அனைத்து தயாரிப்புகளையும் காணலாம்.இதனால், அவர்களின் மதிப்பீடுகள் மற்றும் உங்கள் தனிப்பட்ட தேவைகள் ஆகியவற்றை அடிப்படையாகக் கொண்டு, எந்த நேரத்திலும் உங்கள் வண்டிக்கு தயாரிப்பு மற்றும் புதுப்பிப்பை நீங்கள் சேர்க்கலாம்.",
+       "normal_v_bulk_description":"நீங்கள் ஒரு பொது வாடிக்கையாளராக ஒரு தயாரிப்பை வாங்குவதற்கு ஒரு எல்லை உள்ளது. அதிக அளவு வாங்க தேவைப்பட்டால், அது மொத்த ஆர்டர் வரிசையின் கீழ் வரும்.இரண்டுக்கும் இடையேயான வித்தியாசம் விலை விகிதத்திலும், அளவிலும் உள்ளது.குயப்பத்தை தவிர்ப்பதற்கும் விவசாயிகளுக்கு சுலபமாக இருக்கவும் இப்படி செய்யப்படுகிறது  "
+   },
+    "customer_login":{
+        "login_customer":"வாடிக்கையாளர் உள்நுழை ",
+        "mobile_number":"தொலைபேசி எண் *",
+        "password":"கடவுச்சொல்*",
+        "forgot_password":"கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
+        "login":"வாடிக்கையாளர் உள்நுழை ",
+        "register":"வாடிக்கையாளர் பதிவு ",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை!",
+        "password_is_required":"கடவுச்சொல் தேவை!",
+        "less_than_10_digits":" 10 இலக்கங்களுக்கும் குறைவாக உள்ளது ",
+        "more_than_10_digits":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "more_than_12_digits":"12 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "password_invalid":"கடவுச்சொல் தவறானது(குறைந்தது ஒரு சிற்றெழுத்து, ஒரு பெரியஎழுத்து,ஒரு சிறப்பு எழுத்து,ஒரு எண் மற்றும் குறைந்த பட்ச  நீளம் 6 ) !"
+    },
+    "farmer_login":{
+        "login_farmer":"உழவர் உள்நுழை",
+        "mobile_number":"தொலைபேசி எண்*",
+        "password":"கடவுச்சொல்*",
+        "forgot_password":"கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
+        "login":"உழவர் உள்நுழை",
+        "register":"விவசாயி பதிவு",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை!",
+        "password_is_required":"கடவுச்சொல் தேவை!",
+        "less_than_10_digits":"10 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_10_digits":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "less_than_6_digits":"6 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_12_digits":"12 க்கும் மேற்பட்ட இலக்கங்கள்"
+    },
+    "products":{
+        "search":"தேடல்",
+        "sort_by_relevance":"சம்பந்தம் மூலம் வரிசைப்படுத்தவும்",
+        "price_low_to_high":"விலை: குறைந்த முதல்  அதிக",
+        "price_high_to_low":"விலை: அதிக  முதல் குறைந்த",
+        "quantity_low_to_high":"அளவு: குறைந்த முதல்  அதிக",
+        "quantity_high_to_low":"அளவு: அதிக  முதல் குறைந்த",
+        "distance":"தூரம்",
+        "popular":"புகழ்",
+        "filter_by_price":"விலை மூலம் வடிகட்டு :",
+        "filter_by_quantity":"அளவு மூலம் வடிகட்டு :",
+        "price":"விலை",
+        "quantity":"அளவு",
+        "description":"விளக்கம்:",
+        "bulk_order_price":"மொத்த ஆர்டர் விலை:",
+        "add_to_bag":"பையில் சேர்",
+        "new_message":"புதிய தகவல்",
+        "please_enter_qantity":"அளவை குறிப்பிடவும் ",
+        "close":"வெளியேறு ",
+        "proceed":"தொடர்"
+    }
 }
