farmer add product translated

--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -89,7 +89,7 @@
         "less_than_10_digits":"10 अंकों से कम",
         "more_than_10_digits":"10 से अधिक अंक",
         "more_than_12_digits":"12 से अधिक अंक",
-        "password_invalid":"पासवर्ड अमान्य(कम से कम एक लोअरकेस,अपरकेस,विशेष वर्ण,अंक,न्यूनतम लंबाई ६)"
+        "password_invalid":"पासवर्ड अमान्य(कम से कम एक लोअरकेस,अपरकेस,विशेष वर्ण,अंक,न्यूनतम लंबाई 6)"
     },
     "farmer_login":{
         "login_farmer":"लॉगिन किसान",
@@ -141,5 +141,156 @@
         "sector_21":"सेक्टर 21",
         "gurugram":"गुडगाँव",
         "india":"इंडिया, 122017"
+    },
+    "customer_register":{
+        "register_customer":"रजिस्ट्रार ग्राहक",
+        "first_name":"पहला नाम",
+        "less_than_3_digits":"3 अंकों से कम",
+        "first_name_is_required":"पहला नाम आवश्यक है!",
+        "last_name":"अंतिम नाम",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "mobile_number_is_required":"मोबाइल नंबर की आवश्यकता है!",
+        "password":"पारण शब्द",
+        "less_than_6_digits":"6 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक",
+        "password_invalid":"पासवर्ड अमान्य(कम से कम एक लोअरकेस,अपरकेस,विशेष वर्ण,अंक,न्यूनतम लंबाई 6)!",
+        "password_is_required":"पासवर्ड की आवश्यकता है!",
+        "Re_enter_Password":"पासवर्ड फिर से दर्ज करें",
+        "password_match":"नया पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाता है",
+        "send_otp":"Send OTP",
+        "verify_otp_to_register_customer":" रजिस्ट्रार ग्राहक को ओटीपी सत्यापित करें",
+        "enter_otp":"ओटीपी दर्ज करें",
+        "otp_is_required":"ओटीपी आवश्यक है",
+        "verify_otp":"ओटीपी सत्यापित करें"
+    },
+    "customer_forgot_password":{
+        "forget_password":"पासवर्ड भूल गए",
+        "mobile_number":"मोबाइल नंबर",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "mobile_number_is_required":"मोबाइल नंबर की आवश्यकता है!",
+        "send_otp":"ओटीपी भेजें",
+        "verify_otp_to_reset_password":"पासपोर्ट को रीसेट करने के लिए ओटीपी सत्यापित करें",
+        "enter_otp":"ओटीपी दर्ज करें",
+        "otp_is_required":"ओटीपी आवश्यक है",
+        "verify_otp":"ओटीपी सत्यापित करें",
+        "reset_password":"पासवर्ड रीसेट",
+        "new_password":"नया पासवर्ड",
+        "less_than_6_digits":"6 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक",
+        "password_is_required":"पासवर्ड की आवश्यकता है!",
+        "password_invalid":"पासवर्ड अमान्य(कम से कम एक लोअरकेस,अपरकेस,विशेष वर्ण,अंक,न्यूनतम लंबाई 6)!",
+        "Re_enter_Password":"पासवर्ड फिर से दर्ज करें",
+        "password_match":"नया पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाता है",
+        "submit":"जमा करें"
+    },
+    "farmer_forgot_password":{
+        "forget_password":"पासवर्ड भूल गए",
+        "mobile_number":"मोबाइल नंबर",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "mobile_number_is_required":"मोबाइल नंबर की आवश्यकता है!",
+        "send_otp":"ओटीपी भेजें",
+        "verify_otp_to_reset_password":"पासपोर्ट को रीसेट करने के लिए ओटीपी सत्यापित करें",
+        "enter_otp":"ओटीपी दर्ज करें",
+        "otp_is_required":"ओटीपी आवश्यक है",
+        "verify_otp":"ओटीपी सत्यापित करें",
+        "reset_password":"पासवर्ड रीसेट",
+        "new_password":"नया पासवर्ड",
+        "less_than_6_digits":"6 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक",
+        "password_is_required":"पासवर्ड की आवश्यकता है!",
+        "Re_enter_Password":"पासवर्ड फिर से दर्ज करें",
+        "password_match":"नया पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाता है",
+        "submit":"जमा करें"
+    },
+    "farmer_dashboard":{
+        "my_account":"मेरा खाता",
+        "add_product":"उत्पाद जोड़ें",
+        "bank_details":"बैंक विवरण",
+        "current_order":"अभी का ऑर्डर",
+        "previous_orders":"पिछले आदेश",
+        "view_product":"उत्पाद देखें"
+    },
+    "my_account":{
+        "add_address":"पता जोड़ें",
+        "change_password":"पासवर्ड बदलें",
+        "alternate_mobile":"वैकल्पिक मोबाइल",
+        "delete_profile":"प्रोफ़ाइल हटाएं"
+    },
+    "add_address":{
+        "add_alternate_address":"वैकल्पिक पता जोड़ें",
+        "address_line":"पता पंक्ति",
+        "enter_address_line":"पता रेखा दर्ज करें",
+        "address_line_required":"पता रेखा की आवश्यकता है",
+        "city":"शहर",
+        "enter_your_city":"अपना शहर दर्ज करें",
+        "city_required":"शहर की आवश्यकता है",
+        "district":"जिला",
+        "enter_your_district":"अपना जिला दर्ज करें",
+        "district_required":"जिला आवश्यक है",
+        "state":"राज्य",
+        "enter_your_state":"अपना राज्य दर्ज करें",
+        "state_required":"राज्य की आवश्यकता है",
+        "pincode":"पिनकोड",
+        "enter_your_pincode":"अपना पिनकोड दर्ज करें",
+        "pincode_required":"पिनकोड की आवश्यकता है",
+        "update":"अद्यतन करें"
+    },
+    "farmer_change_password":{
+        "change_password":"पासवर्ड बदलें",
+        "current_password":"वर्तमान पासवर्ड",
+        "enter_current_password":"वर्तमान पासवर्ड डालें",
+        "current_password_required":"वर्तमान पासवर्ड आवश्यक है",
+        "new_password":"नया पासवर्ड",
+        "enter_new_password":"नया पासवर्ड दर्ज करें",
+        "new_password_required":"नया पासवर्ड आवश्यक है",
+        "re-enter_new_password":"नया पासवर्ड पुनः दर्ज करें",
+        "re-enter_new_password_required":"पुनः दर्ज किया गया नया पासवर्ड आवश्यक है",
+        "change":"परिवर्तन"
+    },
+    "alternate_mobile_number":{
+        "alternate_mobile_number":"वैकल्पिक मोबाइल नंबर",
+        "enter_mobile_number":"मोबाइल नंबर दर्ज करें",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "mobile_number_required":"मोबाइल नंबर की आवश्यकता है",
+        "update":"अद्यतन करें"
+    },
+    "delete_profile":{
+        "delete_profile":"प्रोफ़ाइल हटाएं",
+        "enter_password":"पास वर्ड दर्ज करें",
+        "enter_current_password":"वर्तमान पासवर्ड डालें",
+        "current_password_required":"वर्तमान पासवर्ड आवश्यक है",
+        "delete":"हटाना"
+    },
+    "farmer_add_product":{
+        "upload_product":"उत्पाद अपलोड करें",
+        "choose_product_name":"उत्पाद का नाम चुनें",
+        "onion":"प्याज",
+        "tomato":"टमाटर",
+        "brinjal":"बैंगन",
+        "cauliflower":"गोभी",
+        "carrot":"गाजर",
+        "garlic":"लहसुन",
+        "lady_finger":"भिन्डी",
+        "oarnge":"संतरा",
+        "lemon":"नींबू",
+        "product_description":"उत्पाद वर्णन",
+        "enter_description":"विवरण दर्ज करें",
+        "description_required":"विवरण आवश्यक है",
+        "product_price_per_kg":"प्रति किलो उत्पाद मूल्य",
+        "enter_price":"मूल्य दर्ज करें",
+        "price_required":"कीमत की आवश्यकता है",
+        "bulk_product_price_per_kg":"उत्पाद थोक आदेश मूल्य प्रति किलो",
+        "enter_bulk_order_price":"थोक आदेश मूल्य दर्ज करें",
+        "bulk_price_required":"थोक मूल्य की आवश्यकता है",
+        "quantity":"मात्रा",
+        "enter_quantity":"मात्रा दर्ज करें",
+        "quantity_required":"मात्रा आवश्यक है",
+        "in_stock":"स्टॉक में",
+        "upload_image":"एक छवि अपलोड करें",
+        "submit_product":"उत्पाद जमा करें"
     }
 }
