--- a/src/assets/i18n/tl.json
+++ b/src/assets/i18n/tl.json
@@ -6,7 +6,7 @@
         "about_us":"మా గురించి",
         "company_information":"కంపెనీ సమాచారం",
         "policies":"విధానాలు",
-        "contact_us":"మమ్మల్ని సంప్రదించండి",
+        "contact_us":"సంప్రదించండి",
         "reviews":"సమీక్షలు",
         "support":"మద్దతు",
         "help":"సహాయం",
