--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -292,5 +292,218 @@
         "in_stock":"स्टॉक में",
         "upload_image":"एक छवि अपलोड करें",
         "submit_product":"उत्पाद जमा करें"
-    }
+    },
+    "farmer_bank_details":{
+        "bank_details":"बैंक विवरण",
+        "account_number":"खाता संख्या",
+        "account_number_required":"खाता संख्या आवश्यक है",
+        "more_than_12_digits":"12 से अधिक अंकों की अनुमति नहीं है",
+        "minimun_12_digits_are_required":"न्यूनतम 12 अंक आवश्यक हैं",
+        "account_holder_name":"खाता धारक का नाम",
+        "name_required":"नाम आवश्यक है",
+        "more_than_20_characters_not_allowed":"20 से अधिक वर्णों की अनुमति नहीं है",
+        "minimun_2_digits_are_required":"न्यूनतम 2 अंक आवश्यक हैं",
+        "ifsc_code":"आईएफएससी कोड",
+        "ifsc_required":"आईएफएससी कोड की आवश्यकता है",
+        "more_than_6_characters_not_allowed":"6 से अधिक वर्णों की अनुमति नहीं है",
+        "minimun_6_digits_are_required":"न्यूनतम 6 अंक आवश्यक हैं",
+        "save_details":"विवरण बचाओ"
+    },
+    "farmer_current_order":{
+        "customer_id":"ग्राहक आईडी",
+        "product_name":"उत्पाद का नाम",
+        "address":"पता",
+        "quantity":"मात्रा",
+        "amount":"रकम",
+        "delivered":"पहुंचा दिया",
+        "accept":"स्वीकार",
+        "decline":"पतन"
+    },
+    "farmer_previous_order":{
+        "customer_id":"ग्राहक आईडी",
+        "product_name":"उत्पाद का नाम",
+        "address":"पता",
+        "quantity":"मात्रा",
+        "amount":"रकम",
+        "order_status":"आदेश की स्थिति",
+        "delivery_date":"डिलीवरी की तारीख"
+    },
+    "farmer_view_product":{
+        "producid":"उत्पाद आइ डि",
+        "description":"विवरण",
+        "price":"मूल्य",
+        "bulk_ordr_price":"थोक आदेश मूल्य",
+        "quantity":"मात्रा",
+        "update":"अद्यतन करें",
+        "delete":"हटाना",
+        "upadte_product":"उत्पाद अपडेट करें",
+        "cancel":"रद्द करना"
+    },
+    "aadhaar":{
+        "register_farmer":"किसान रजिस्टर करें",
+        "aadhaar_number":"आधार संख्या",
+        "less_than_12_digits":"12 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक",
+        "aadhaar_number_required":"आधार संख्या आवश्यक है",
+        "send_otp":"ओटीपी भेजें",
+        "verify_otp_to_register_farmer":"रजिस्टर किसान को ओटीपी सत्यापित करें",
+        "enter_otp":"ओटीपी दर्ज करें",
+        "otp_is_required":"ओटीपी आवश्यक है",
+        "verify_otp":"ओटीपी सत्यापित करें"
+    },
+    "farmer_register":{
+        "mobile_number":"मोबाइल नंबर",
+        "less_than_10_digits":"10 अंकों से कम",
+        "more_than_10_digits":"10 से अधिक अंक",
+        "mobile_number_required":"मोबाइल नंबर की आवश्यकता है",
+        "cities_where_you_can_deliver":"वे शहर जहां आप डिलीवर कर सकते हैं",
+        "delhi":"दिल्ली",
+        "gurgaon":"गुडगाँव",
+        "noida":"नोएडा",
+        "password":"पारण शब्द",
+        "less_than_6_digits":"6 अंकों से कम",
+        "more_than_12_digits":"12 से अधिक अंक",
+        "password_is_required":"पासवर्ड की आवश्यकता है",
+        "re-enter_password":"पासवर्ड फिर से दर्ज करें",
+        "new_confirm_password_did_not_match":"नया पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाता है",
+        "submit":"जमा करें"
+    },
+    "customer_address_book":{
+        "address_details":"पते का विवरण",
+        "add_address":"पता जोड़ें"
+    },
+    "customer_add_address":{
+        "add_alternate_address":"वैकल्पिक पता जोड़ें",
+        "address_line":"पता पंक्ति",
+        "enter_address_line":"पता रेखा दर्ज करें",
+        "address_line_required":"पता रेखा आवश्यक है",
+        "city":"शहर",
+        "enter_your_city":"अपना शहर दर्ज करें",
+        "city_required":"शहर की आवश्यकता है",
+        "district":"जिला",
+        "enter_your_district":"अपना जिला दर्ज करें",
+        "district_required":"जिला आवश्यक है",
+        "state":"राज्य",
+        "enter_your_state":"अपना राज्य दर्ज करें",
+        "state_required":"राज्य की आवश्यकता है",
+        "pincode":"पिन कोड",
+        "enter_your_pincode":"अपना पिनकोड दर्ज करें",
+        "pincode_required":"पिनकोड की आवश्यकता है",
+        "update":"अद्यतन करें"
+    },
+    "customer_current_order":{
+        "my_orders":"मेरे आदेश",
+        "orderid":"आदेश कामतत्व",
+        "product_name":"उत्पाद का नाम",
+        "quantity":"मात्रा (किलो में)",
+        "price":"मूल्य (रुपये में)",
+        "rating":"रेटिंग",
+        "otp":"OTP"
+    },
+    "customer_previous_order":{
+        "previous_orders":"पिछले आदेश",
+        "orderid":"आदेश कामतत्व",
+        "product_name":"उत्पाद का नाम",
+        "quantity":"मात्रा (किलो में)",
+        "price":"मूल्य (रुपये में)",
+        "farmer_rating":"किसान रेटिंग",
+        "otp":"OTP"
+    },
+    "customer_my_account":{
+        "my_orders":"मेरे आदेश",
+        "previous_orders":"पिछले आदेश",
+        "address_book":"पता पुस्तिका",
+        "change_password":"पासवर्ड बदलें",
+        "mobile_number":"मोबाइल नंबर",
+        "mobile_number_required":"मोबाइल नंबर की आवश्यकता है",
+        "current_password":"वर्तमान पासवर्ड",
+        "enter_current_password":"वर्तमान पासवर्ड दर्ज करें",
+        "current_password_required":"वर्तमान पासवर्ड आवश्यक है",
+        "new_password":"नया पासवर्ड",
+        "enter_new_password":"नया पासवर्ड दर्ज करें",
+        "new_password_required":"नया पासवर्ड आवश्यक है",
+        "re-enter_new_password":"नया पासवर्ड दोबारा दर्ज करें",
+        "re-enter_new_password_required":"नया पासवर्ड पुनः दर्ज करना आवश्यक है",
+        "change":"जमा करें",
+        "delete_profile":"प्रोफ़ाइल हटाएं",
+        "enter_10_digit_mobile_number":"अपना 10 अंकों का मोबाइल नंबर दर्ज करें",
+        "password":"पारण शब्द",
+        "enter_your_password":"अपना पासवर्ड डालें",
+        "pssword_required":"पासवर्ड आवश्यक"       
+    },
+    "customer_my_cart":{
+        "your_cart":"आपका कार्ट",
+        "items":"आइटम",
+        "continue_shopping":"खरीदारी जारी रखें",
+        "qty":"मात्रा",
+        "kg":"किलोग्राम",
+        "products_will_be_delivered_to":"उत्पाद वितरित किया जाएगा",
+        "no_address_linked":"कोई पता जुड़ा हुआ नहीं है",
+        "add_address":"पता जोड़ें",
+        "total":"कुल",
+        "place_order":"आदेश देना"
+    },
+    "customer_payment":{
+        "payment_details":"भुगतान विवरण",
+        "cash_on_delivery":"डिलवरी पर नकदी",
+        "credit_debit_card":"क्रेडिट / डेबिट कार्ड",
+        "Card_number":"कार्ड नंबर",
+        "less_than_16_digits":"16 अंकों से कम",
+        "more_than_16_digits":"16 से अधिक अंक",
+        "card_number_is_required":"कार्ड नंबर की आवश्यकता है",
+        "expiry_date":"समाप्ति तिथि",
+        "less_than_1_digits":"1 अंकों से कम",
+        "more_than_2_digits":"2 से अधिक अंकs",
+        "month_is_required":"महीना आवश्यक है",
+        "year_is_required":"साल की आवश्यकता है",
+        "cvv_code":"सी वी वी कोड",
+        "less_than_3_digits":"3 अंकों से कम",
+        "more_than_3_digits":"3 से अधिक अंक",
+        "cvv_is_required":"सीवीवी की आवश्यकता है",
+        "make_payment":"भुगतान करो"       
+    },
+    "about_us":{
+        "about_us_heading":"हमारे बारे में",
+        "problem_statement":"समस्या का विवरण",
+        "in_the_global_market":"वैश्विक बाजार में",
+        "problem_statement_description1":"आपूर्ति श्रृंखला में उत्पादों की वास्तविक कीमत प्रचलित नहीं है।",   
+        "problem_statement_description2":"किसानों को बेचने के लिए एक मंच की जरूरत है।",
+        "problem_statement_description3":"उनके उत्पादों को उनके सुविधाजनक मूल्य पर। ग्राहकों को खेत के मालिक से उत्पाद नहीं मिलते हैं।",
+        "project_definition":"परियोजना की परिभाषा",
+        "project_definition_description1":"परियोजना किसान की डुकान (केकेडी) प्रवृत्ति का प्रक्षेपण है जो सीधे माल से ग्राहक को सामान वितरित करने पर केंद्रित है।",
+        "project_definition_description2":"जैसा कि हम जानते हैं, यह ताजा नहीं है अगर यह खेत से नहीं है।",
+        "project_definition_description3":"केकेडी एक ऑनलाइन पोर्टल है जो कि किसानों को सीधे अपने खेत से प्रत्येक के लिए व्यापार की आश्चर्यजनक श्रृंखला प्रदान करने में सुविधा प्रदान करता है",
+        "project_definition_description4":"गृहस्थी",
+        "project_definition_description5":"रेस्तरां",
+        "project_definition_description6":"होटल",
+        "project_definition_description7":"दुकानें",
+        "project_definition_description8":"किसान और ग्राहक के बीच इलेक्ट्रॉनिक रूप से स्थानांतरित करने के माध्यम से।",
+        "stakeholders":"हितधारकों",
+        "stakeholders_description1":"किसान: किसानों को सीधे अपने ग्राहक के साथ जोड़कर और बिचौलियों को खत्म करके, केकेडी उन्हें अधिक लाभ अर्जित करने में मदद करेगा।",
+        "stakeholders_description2":"ग्राहक: खरीदार सीधे अपने खेत से उत्पाद प्राप्त करेंगे। इसलिए वे यह सुनिश्चित कर सकते हैं कि वे जिन सब्जियों का उपभोग कर रहे हैं वे ताजा और बेकार हैं।",
+        "stakeholders_description3":" उत्पाद स्वामी: हम उत्पाद डेवलपर्स और मालिकों के रूप में किसानों और ग्राहकों के साथ बातचीत करने के लिए एक मंच प्रदान करेंगे।",
+        "scope_and_impact":"दायरा और प्रभाव", 
+        "scope":"क्षेत्र",
+        "scope_description":"छोटे पैमाने और बड़े पैमाने पर किसान",
+        "scope_description1":"उत्पादों के उपभोक्ता",
+        "Impact":"प्रभाव",
+        "impact_description1":"आपूर्ति श्रृंखला का डिजिटलकरण",
+        "impact_description2":"लाभदायक किसान",
+        "impact_description3":"मांग आपूर्ति प्रबंधन पर",
+        "impact_description4":"आपूर्ति श्रृंखला की कई परतों को खत्म करना",
+        "features":"विशेषताएं",
+        "features_description1":"उदारता और वैश्विक बाजार पहुंच",
+        "features_description2":"अमीरता और अंतःक्रियाशीलता",
+        "features_description3":"निजीकरण",
+        "features_description4":"बिचौलियों की जरूरत को कम करना",
+        "features_description5":"सीधे खेत से ग्राहक के दरवाजे तक ताजा उत्पाद",
+        "functionalities":"कार्यक्षमताओं",
+        "functionalities_description1":"मोबाइल नंबर के साथ एक कदम पंजीकरण",
+        "functionalities_description2":"उत्पादों की विविधता खोजें और क्रमबद्ध करें",
+        "functionalities_description3":"सूची प्रबंधन",
+        "functionalities_description4":"सरल चेकआउट",
+        "functionalities_description5":"आदेश का प्रबंधन",
+        "functionalities_description6":"समीक्षा प्रबंधन",
+        "functionalities_description7":"ऑनलाइन भुगतान या सीओडी विकल्प"
+     }
 }
