changes in en json

--- a/src/assets/i18n/tm.json
+++ b/src/assets/i18n/tm.json
@@ -125,5 +125,84 @@
         "please_enter_qantity":"அளவை குறிப்பிடவும் ",
         "close":"வெளியேறு ",
         "proceed":"தொடர்"
+    },
+    "policy":{
+        "policies":"கொள்கைகள்",
+        "description":"திரும்பி கொடுத்தல் என்பது இந்த கொள்கையின் கீழ் நேரடியாக விற்பனையாளர்களிடமிருந்து வழங்கப்படும் ஒரு திட்டமாகும், இதனுடன்   பரிமாற்றம், மாற்றுதல் மற்றும் திரும்பப் பெறுதல் தொடர்புடைய விற்பனையார்களின்  விருப்பம். ஒரு குறிப்பிட்ட பிரிவின் கீழ் பட்டியலிடப்பட்ட அனைத்து பொருட்களும் அதே திரும்பப் பெறும்  கொள்கையை கொண்டிருக்க முடியாது.அனைத்து தயாரிப்புகளுக்கும், தயாரிப்பு பக்கத்தில் உள்ள கொள்கை பொது திரும்பப் பெறும் கொள்கைக்கு மேல் இருக்கும். கீழேயுள்ள அட்டவணையில் உள்ள விதிவிலக்குகளுக்கான தயாரிப்பு பக்கத்தில், அந்தந்த பொருளின் பொருந்தக்கூடிய திரும்பப் பெறும் கொள்கையைப் பார்க்கவும்.  திரும்பப் பெறும் கொள்கை மூன்று பகுதிகளாக பிரிக்கப்பட்டுள்ளது; எந்த நிலைமைகள் மற்றும் சூய்நிலைகளின் கீழ் திரும்பப் பெறுதல் ஏற்றுக்கொள்ளப்படும்  என்பதை புரிந்து கொள்ள அனைத்து பிரிவுகளையும் கவனமாக படிக்கவும். ஒரு தனியுரிமை கொள்கை என்பது ஒரு சட்ட ஆவணம்,இது ஒரு வலைத்தளம் எவ்வாறு சேகரிக்கிறது , சேமிக்கிறது , பகிர்கிறது மற்றும் அதன் பார்வையாளர்களைப் பற்றிய தகவல்களை விற்கிறது என்பதை விளக்கிறது.இந்த தரவு பொதுவாக பயனரின் பெயர், முகவரி, பிறந்த நாள், திருமண நிலை, மருத்துவ வரலாறு மற்றும் நுகர்வோர் நடத்தை போன்றவற்றை உள்ளடக்கியுள்ளது. இந்த ஆவணத்தின் குறிப்பிட்ட உள்ளடக்கங்கள், உங்கள் வணிகச் செயல்பாட்டிலுள்ள சட்ட உரிமையின் சட்டங்களைச் சார்ந்து இருக்கும். சேகரிப்புக்குத் தகுதியுள்ள தகவலைப் பயன்படுத்துவது மற்றும் அந்தத் தகவல் எவ்வாறு பயன்படுத்தப்படலாம் என்பதற்கு பெரும்பாலான நாடுகளில் தங்களின் சொந்த வழிகாட்டு நெறிகள் உள்ளன. சட்ட ஆவணங்கள் என்று வரும் போது,தேவையில்லாமல் முயற்சிப்பது உகந்தது அல்ல . அதிர்ஷ்டவசமாக, ஒரு சில நிமிடங்களில் ஒரு இலவச இணைய தனியுரிமை கொள்கையை பெறுவது எளிது . நீங்கள் செய்ய வேண்டியது எல்லாம் கீழே உள்ள வெற்று இடைவெளிகளை நிரப்புவது ,பின்னர்  உங்கள் வணிகத்திற்கான தனிப்பயனாக்கப்பட்ட தனியுரிமை கொள்கையுடன் உங்களுக்கு மின்னஞ்சல் அனுப்புவோம்."
+    },
+    "connect_us":{
+        "contact_us":"எங்களை தொடர்பு கொள்ள",
+        "mail_us":"எங்களுக்கு அஞ்சல் அனுப்ப ",
+        "registered_office_address":"பதிவுசெய்த அலுவலக முகவரி",
+        "kisan_ki_dukan":"கிசான் கி துகான் ",
+        "kkd":"KKD",
+        "publicis":"புபிலிஸிஸ் செபியின்ட்  தனியார் வரையறுக்கப்பட்ட",
+        "unitech_infospace":"யூனிடெக் இன்போஸ்பேஸ் ",
+        "sector_21 ":" துறை 21 ",
+        "gurugram":"குறுகிறம்",
+        "india":"இந்தியா , 122017"
+    },
+    "customer_register":{
+        "register_customer":"வாடிக்கையாளர் பதிவு",
+        "first_name":"முதல் பெயர்",
+        "less_than_3_digits":"3 இலக்கங்களுக்கும் குறைவாக உள்ளது ",
+        "first_name_is_required":"முதல் பெயர் தேவை!",
+        "last_name":"கடைசி பெயர்",
+        "less_than_10_digits":"10 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_10_digits":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை!",
+        "password":"கடவுச்சொல்",
+        "less_than_6_digits":"6 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_12_digits":"12 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "password_invalid":"கடவுச்சொல் தவறானது(குறைந்தது ஒரு சிற்றெழுத்து, ஒரு பெரியஎழுத்து,ஒரு சிறப்பு எழுத்து,ஒரு எண் மற்றும் குறைந்த பட்ச  நீளம் 6 ) !",
+        "password_is_required":"கடவுச்சொல் தேவை!",
+        "Re_enter_Password":"கடவு சொல்லை திருப்பி உள்ளிடவும் ",
+        "password_match":"புதிய கடவுச்சொல் மற்றும் கடவுச்சொல்லை உறுதிப்படுத்துவது பொருந்தவில்லை",
+        "send_otp":"OTP ஐ அனுப்பவும்",
+        "verify_otp_to_register_customer":"வாடிக்கையாளரை  பதிவு செய்ய OTP ஐ சரிபார்க்கவும்",
+        "enter_otp":"OTP ஐ உள்ளிடவும்",
+        "otp_is_required":"OTP தேவைப்படுகிறது",
+        "verify_otp":"OTP ஐ சரிபார்க்கவும்"
+    },
+    "customer_forgot_password":{
+        "forget_password":"கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
+        "mobile_number":"தொலைபேசி எண்",
+        "less_than_10_digits":"10 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_10_digits":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை!",
+        "send_otp":"OTP ஐ அனுப்பவும்",
+        "verify_otp_to_reset_password":"கடவுச்சொல் மீட்டமைக்க OTP ஐ சரிபார்க்கவும்",
+        "enter_otp":"OTP ஐ உள்ளிடவும்",
+        "otp_is_required":"OTP தேவைப்படுகிறது",
+        "verify_otp":"OTP ஐ சரிபார்க்கவும்",
+        "reset_password":"கடவுச்சொல்லை மீட்டமைக்க",
+        "new_password":"புதிய கடவுச்சொல்",
+        "less_than_6_digits":"6 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_12_digits":"12 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "password_is_required":"கடவுச்சொல் தேவை!",
+        "password_invalid":"கடவுச்சொல் தவறானது(குறைந்தது ஒரு சிற்றெழுத்து, ஒரு பெரியஎழுத்து,ஒரு சிறப்பு எழுத்து,ஒரு எண் மற்றும் குறைந்த பட்ச  நீளம் 6 ) !",
+        "Re_enter_Password":"கடவு சொல்லை திருப்பி உள்ளிடவும் ",
+        "password_match":"புதிய கடவுச்சொல் மற்றும் கடவுச்சொல்லை உறுதிப்படுத்துவது பொருந்தவில்லை",
+        "submit":"சமர்ப்பி"
+    },
+    "farmer_forgot_password":{
+        "forget_password":"கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
+        "mobile_number":"தொலைபேசி எண்",
+        "less_than_10_digits":"10 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_10_digits":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை!",
+        "send_otp":"OTP ஐ அனுப்பவும்",
+        "verify_otp_to_reset_password":" கடவுச்சொல் மீட்டமைக்க OTP ஐ சரிபார்க்கவும்",
+        "enter_otp":"OTP ஐ உள்ளிடவும்",
+        "otp_is_required":"OTP தேவைப்படுகிறது",
+        "verify_otp":"OTP ஐ சரிபார்க்கவும்",
+        "reset_password":"கடவுச்சொல்லை மீட்டமைக்க",
+        "new_password":"புதிய கடவுச்சொல்",
+        "less_than_6_digits":"6 இலக்கங்களுக்கும் குறைவாக உள்ளது",
+        "more_than_12_digits":"12 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "password_is_required":"கடவுச்சொல் தேவை!",
+        "Re_enter_Password":"கடவு சொல்லை திருப்பி உள்ளிடவும்",
+        "password_match":"புதிய கடவுச்சொல் மற்றும் கடவுச்சொல்லை உறுதிப்படுத்துவது பொருந்தவில்லை",
+        "submit":"சமர்ப்பி"
     }
 }
